<resources>
    <string name="app_name">MRIMate</string>

    <!-- Onboarding Activity -->
    <string name="onboarding_images">Onboarding Images</string>
    <string name="onboarding_title1">Thousands of Doctors</string>
    <string name="onboarding_title2">Real-Time MRI Scan</string>
    <string name="onboarding_title3">Chat with doctors</string>
    <string name="onboarding_body1">Access thousands of Doctors instantly.\nYou can easily contact with the doctors and contact for your needs.</string>
    <string name="onboarding_body2">Get fast and accurate MRI results with our Real-Time MRI Scan feature.</string>
    <string name="onboarding_body3">Book an appointment with doctor.\nChat with doctor via appointment letter.\nGet consultant.</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="skip_for_now">Skip for now</string>

    <string name="back_button">Back</string>

    <!-- Registration Activity -->
    <string name="create_a_free_account">Create a free account</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_in">Sign in</string>

    <!-- SignIn Activity -->
    <string name="email">Email</string>
    <string name="email_hint">myemail@user.com</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter password</string>
    <string name="forget_password">Forgot password?</string>
    <string name="contact_us_on">Contact us on</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="new_to_MRIMate">New to MRIMate?</string>
    <string name="create_account">Create account</string>

    <!-- SignUp Activity -->
    <string name="name">Name</string>
    <string name="name_hint">Enter your full name</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_hint">Enter your phone number</string>
    <string name="hospital_id">Hospital ID</string>
    <string name="hospital_id_hint">Enter your hospital ID</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="already_have_an_account">Already have an account?</string>

    <!-- Reset Password Activity -->
    <string name="forgot_password">Forgot Password</string>
    <string name="forget_password_description">Please enter your email address below to receive your reset password link.</string>
    <string name="reset_password">Reset Password</string>

    <!-- Bottom Navigation -->
    <string name="list">List</string>
    <string name="saved">Saved</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="scan_image">Scan Image</string>

    <!-- Authentication error messages -->
    <string name="empty_email_error">Email is required</string>
    <string name="invalid_email_error">Please enter a valid email</string>
    <string name="empty_name_error">Name is required</string>
    <string name="empty_phone_number_error">Phone number is required</string>
    <string name="invalid_phone_number_error">Please enter a valid phone number</string>
    <string name="empty_password_error">Password is required</string>
    <string name="password_length_error">Password must be at least 6 characters</string>
    <string name="invalid_password_error">Please enter a valid password</string>
    <string name="empty_hospital_id_error">Hospital ID is required</string>

    <!-- Toast messages -->
    <string name="invalid_password_message">Password must contain 1 uppercase, 1 lowercase, and 1 number</string>
    <string name="verification_email_sent_message">Verification email has been sent to your email</string>
    <string name="verification_required_message">Please verify your email</string>
    <string name="password_reset_message">Password reset link has been sent to your email</string>
    <string name="sign_in_success_message">Sign in successful</string>
    <string name="sign_up_success_message">Sign in successful</string>
    <string name="user_does_not_exist_message">User does not exist</string>
    <string name="unknown_error_message">An unknown error occurred</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>