<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/listPatientsFragment"
            android:icon="@drawable/ic_list"
            android:title="@string/list" />

        <item
            android:id="@+id/savedFragment"
            android:icon="@drawable/ic_saved"
            android:title="@string/saved" />

        <item
            android:id="@+id/place_holder"
            android:title="" />

        <item
            android:id="@+id/aboutUsFragment"
            android:icon="@drawable/ic_group"
            android:title="@string/about_us" />

        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>