<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SignUpFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@drawable/ic_logo" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/bt_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <ScrollView
        android:id="@+id/layout_sign_up"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:paddingTop="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintVertical_bias="0.07">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_12sdp">

            <!-- TextView of Email label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_15sdp"
                android:text="@string/email"
                android:textColor="@color/rhythm"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_email" />

            <!-- EditText of Email value -->
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="Autofill" />

            <!-- TextView of Name label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawablePadding="@dimen/_15sdp"
                android:text="@string/name"
                android:textColor="@color/rhythm"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_person_2" />

            <!-- EditText of Name value -->
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="Autofill" />

            <!-- TextView of Phone label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawablePadding="@dimen/_15sdp"
                android:text="@string/phone_number"
                android:textColor="@color/rhythm"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_person_2" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_hint"
                android:inputType="phone"
                tools:ignore="Autofill" />


            <!-- TextView of Password label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawablePadding="@dimen/_15sdp"
                android:text="@string/password"
                android:textColor="@color/rhythm"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_lock" />

            <!-- textField of Password value wrapped with a container that have the eye button to hide the password when writing it -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- TextView of Hospital Id label -->
            <TextView
                android:id="@+id/tv_hospital_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawablePadding="@dimen/_15sdp"
                android:text="@string/hospital_id"
                android:textColor="@color/rhythm"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_numbers" />

            <!-- EditText of Name value -->
            <EditText
                android:id="@+id/et_hospital_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/hospital_id_hint"
                android:inputType="number"
                android:minHeight="48dp"
                tools:ignore="Autofill" />

        </LinearLayout>
    </ScrollView>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/bt_create_account"
        app:layout_constraintEnd_toEndOf="@id/layout_sign_up"
        app:layout_constraintStart_toStartOf="@id/layout_sign_up">

        <RadioButton
            android:id="@+id/rb_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/doctor"
            android:textColor="@color/rhythm"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rb_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient"
            android:textColor="@color/rhythm"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/bt_create_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_32sdp"
        android:background="@drawable/button_green_shape"
        android:text="@string/create_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/layout_sign_in"
        app:layout_constraintEnd_toEndOf="@id/layout_sign_up"
        app:layout_constraintStart_toStartOf="@id/layout_sign_up" />

    <LinearLayout
        android:id="@+id/layout_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_50sdp"
        app:layout_constraintBottom_toTopOf="@id/tv_contact_us"
        app:layout_constraintEnd_toEndOf="@id/layout_sign_up"
        app:layout_constraintStart_toStartOf="@id/layout_sign_up">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/silver_sand"
            android:textSize="@dimen/_12ssp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/contact_us_on"
        android:textColor="@color/silver_sand"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toTopOf="@id/layout_contact_us"
        app:layout_constraintEnd_toStartOf="@id/divider"
        app:layout_constraintStart_toStartOf="@id/layout_sign_up" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:background="@color/silver_sand"
        app:layout_constraintBottom_toBottomOf="@id/tv_contact_us"
        app:layout_constraintEnd_toEndOf="@id/layout_sign_up"
        app:layout_constraintStart_toEndOf="@id/tv_contact_us"
        app:layout_constraintTop_toTopOf="@id/tv_contact_us" />

    <LinearLayout
        android:id="@+id/layout_contact_us"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_65sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/layout_sign_up"
        app:layout_constraintStart_toStartOf="@id/layout_sign_up">

        <ImageView
            android:id="@+id/iv_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:contentDescription="@string/facebook"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/iv_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:contentDescription="@string/google"
            app:srcCompat="@drawable/ic_google" />

        <ImageView
            android:id="@+id/iv_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:contentDescription="@string/twitter"
            app:srcCompat="@drawable/ic_twitter" />

        <ImageView
            android:id="@+id/iv_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/instagram"
            app:srcCompat="@drawable/ic_instagram" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>