<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.OnboardingActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_onboarding"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:contentDescription="@string/onboarding_images"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@drawable/onboarding_image1" />

    <TextView
        android:id="@+id/tv_onboarding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_28sdp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/rhythm"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewpager_onboarding"
        tools:text="@string/onboarding_title1" />

    <TextView
        android:id="@+id/tv_onboarding_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:textAlignment="center"
        android:textColor="@color/metallic_silver"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@id/tv_onboarding_title"
        app:layout_constraintStart_toStartOf="@id/tv_onboarding_title"
        app:layout_constraintTop_toBottomOf="@id/tv_onboarding_title"
        tools:text="@string/onboarding_body1" />

    <Button
        android:id="@+id/bt_get_started"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green_shape"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_onboarding_body"
        app:layout_constraintStart_toStartOf="@id/tv_onboarding_body"
        app:layout_constraintTop_toBottomOf="@id/tv_onboarding_title"
        app:layout_constraintVertical_bias="0.55"
        tools:text="@string/get_started" />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/skip_for_now"
        android:textColor="@color/silver_sand"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@id/bt_get_started"
        app:layout_constraintStart_toStartOf="@id/bt_get_started"
        app:layout_constraintTop_toBottomOf="@id/bt_get_started" />

</androidx.constraintlayout.widget.ConstraintLayout>